RESOLVED FIXED94634
[BlackBerry] WebGL Aquarium fails to render
https://bugs.webkit.org/show_bug.cgi?id=94634
Summary [BlackBerry] WebGL Aquarium fails to render
Arvid Nilsson
Reported 2012-08-21 13:55:41 PDT
PR 196383
Attachments
Patch (1.77 KB, patch)
2012-08-21 14:05 PDT, Arvid Nilsson
no flags
Arvid Nilsson
Comment 1 2012-08-21 14:05:31 PDT
Yong Li
Comment 2 2012-08-21 14:12:15 PDT
Comment on attachment 159766 [details] Patch lgtm
WebKit Review Bot
Comment 3 2012-08-21 17:25:29 PDT
Comment on attachment 159766 [details] Patch Clearing flags on attachment: 159766 Committed r126236: <http://trac.webkit.org/changeset/126236>
WebKit Review Bot
Comment 4 2012-08-21 17:25:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.