[BlackBerry] WebGL Aquarium fails to render https://bugs.webkit.org/show_bug.cgi?id=94634

The aquarium leaves with a glColorMask(false, false, false, true) which
caused us to fail to blit the color components of the aquarium to the
EGLImage.

Fixed by setting an appropriate color mask for a blit operation.

Reviewed by Yong Li.

No new tests, tested manually.

* platform/graphics/blackberry/EGLImageLayerWebKitThread.cpp:
(WebCore::EGLImageLayerWebKitThread::blitToFrontBuffer):


Canonical link: https://commits.webkit.org/112468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126236 268f45cc-cd09-0410-ab3c-d52691b4dbfc